src-ken&y/objects/MRP_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>MRP Settings</description>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Name of Company MRP is processing</description>
        <inlineHelpText>Name of Company MRP is processing</inlineHelpText>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <description>Latest MRP run for this company end date and time</description>
        <inlineHelpText>Latest MRP run for this company end date and time</inlineHelpText>
        <label>End Date-Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Erase_Complete_Date_Time__c</fullName>
        <description>Date Time the MRP finished erasing its records</description>
        <inlineHelpText>Date Time the MRP finished erasing its records</inlineHelpText>
        <label>Erase Complete Date-Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Previous_End_Date_Time__c</fullName>
        <description>Previous MRP run for this company end date and time</description>
        <inlineHelpText>Previous MRP run for this company end date and time</inlineHelpText>
        <label>Previous End Date-Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Previous_Start_Date_Time__c</fullName>
        <description>Previous MRP run for this company start date and time</description>
        <inlineHelpText>Previous MRP run for this company start date and time</inlineHelpText>
        <label>Previous Start Date-Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Running__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked the MRP is currently running for this company</description>
        <inlineHelpText>If checked the MRP is currently running for this company</inlineHelpText>
        <label>Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <description>Latest MRP run for this company start date and time</description>
        <inlineHelpText>Latest MRP run for this company start date and time</inlineHelpText>
        <label>Start Date-Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Temp_Complete_Date_Time__c</fullName>
        <description>Date Time the MRP finished creating its temp records</description>
        <inlineHelpText>Date Time the MRP finished creating its temp records</inlineHelpText>
        <label>Temp Complete Date-Time</label>
        <type>DateTime</type>
    </fields>
    <label>MRP Settings</label>
</CustomObject>